# axum-static-file-server

./: Cargo.toml  Dockerfile  DockerfileNginx  build.sh
assets/: build.sh  index.html  package.json
assets/assets/: css-vars-ponyfill.esm-e95f7ea1.js  i18n-cn-79f06326.js  i18n-en-44214ce7.js  i18n-helper-ef5bc359.js  iconfont-570123c6.js  iconfont-6f4a4dc6.js  index-01866591.js  index-20d78cb2.css  index-21496a37.js  index-2be17af7.js  index-3459a905.js  index-6524c7ed.js  index-7832d86c.js  index-a2e7bcf1.js  index-a9128579.js  index-c454e067.js  index-cbf4ccd1.js  index-e9046182.js  shared-4873712f.js  style-common-3f6ae1da.css  style-pages-42a62cad.js  style-pages-e03ce8b0.css  style-shared-6740825f.js  style-shared-952257b5.css  useColumns-31cfb7a0.js  usePhotoUpload-fd7bbc46.js  useS3Upload-00eba9e8.js  variables-ead95c3d.js  vendor-base-cc18fcff.js  vendor-c76f9059.js
deploy/: default.conf  nginx.conf
src/: logx.rs  main.rs
