[package]
name = "static-file-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
axum-extra = "0.9.2"
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
colored="2.0.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
hyper = "1.2.0"
log = "0.4.21"
mime = "0.3.17"
mime_guess = "2.0.4"
once_cell = "1.19.0"
