[package]
name = "static-file-server"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "validate-request"] }
tracing = "0.1.40"
colored="2.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
hyper = "1.3.1"
log = "0.4.21"
http = "1.1.0"
http-body = "1.0.0"
bytes = "1.6.0"
http-body-util = "0.1.1"
mime = "0.3.17"
mime_guess = "2.0.4"
once_cell = "1.19.0"
env_logger = "0.11.3"
brotli = "6.0.0"
walkdir = "2.5.0"
